--- a/src/app/inbox/item-views/list-view.scss
+++ b/src/app/inbox/item-views/list-view.scss
@@ -175,3 +175,20 @@ md-list-item {
     height: 30px;
   }
 }
+
+/* Plese move to header component css */
+md-toolbar.toolbar {
+  background: transparent url("../app/inbox/images/header-bg.png") repeat-x scroll 0 0 / 100% 100%;
+  min-height: 34px;
+  height: 34px;
+}
+
+md-sidenav-container.md-pushed{
+  padding-left: 200px;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
