--- a/src/app/share/components/date-picker/mydatepicker.scss
+++ b/src/app/share/components/date-picker/mydatepicker.scss
@@ -30,15 +30,14 @@ $ca-caltable-bg: #003366;
     }
     .selector {
         margin-top: 22px;
-        margin-left: -22px;
         position: absolute;
         max-width: 262px;
         padding: 0px;
         border-radius: 2px;
-        background-color: $ca-date-lightgray;
+        background-color: #ddd;
         z-index: 100;
-        left: 0px;
-        right: 16px;
+        left: -51px;
+        right: -63px;
     }
     .selectiongroup {
         position: relative;
