--- a/src/app/order/components/order-header.component.html
+++ b/src/app/order/components/order-header.component.html
@@ -72,8 +72,8 @@
 
  <div class="orders">
 
-  <div layout="row" layout-xs="column" class="right-top-section">
-<!--     <div flex>
+<!--   <div layout="row" layout-xs="column" class="right-top-section">
+    <div flex>
       <md-list layout="column">
         <md-list-item class="md-3-line col-order-detail">
           <img src="app/share/images/avtars/{{currentOrder.defaultTask.assignedTo.firstName}}.jpg" class="md-avatar" >
@@ -85,8 +85,8 @@
           </div>
         </md-list-item>
       </md-list>
-    </div> -->
-    <!-- <div flex>
+    </div>
+    <div flex>
       <md-list layout="column" layout-align="end end">
         <md-list-item class="md-3-line col-order-detail">
           <div class="md-list-item-text">
@@ -99,8 +99,8 @@
           </div>
         </md-list-item>
       </md-list>
-    </div> -->
-  </div>
+    </div>
+  </div> -->
 
 <!--   <div layout="row" layout-xs="column" class="assigned-section">
     <div flex class="assigned-select" flex="40">
@@ -117,8 +117,8 @@
   <div class="show-details">
     <span>Show Details</span>
   </div>
-  <div style="display: inline-block;width: 100%;">
-    <div style="float: left; width:15%;">
+  <div class="customer-details">
+    <div class="select-customer">
       <div class="header-details">
         <div flex class="client-section">
           <img class="client-img" src="app/share/images/company-logo/infosys.png">
@@ -129,7 +129,7 @@
         </select>
       </div>
     </div>
-    <div style="float: left;width:70%;">
+    <div class="checkout-section">
       <div class="checkout-wrap">
         <ul class="checkout-bar">
           <li class="visited first">
@@ -159,18 +159,11 @@
         </ul>
       </div>
     </div>
-    <div style="float: left; width:15%;">
+    <div class="assigned-customer">
       <div class="header-details">
         <div flex class="client-section">
           <img class="client-img" src="app/share/images/company-logo/infosys.png">
         </div>
-<!--        <select>
-          <option value=""> Test1 </option>
-          <option value=""> Test2 </option>
-          <option value=""> Test3 </option>
-        </select>-->
-
-        <!--<select  [(ngModel)]="selectedUser" (ngModelChange)="onChange($event)">-->
         <select (change)="onChange($event.target.value)">
           <option selected="selected">Select User</option>
           <option *ngFor="#user of allUsers" [value]="user.firstName">{{user.firstName}}</option>
